testdata/invalid/struct_compiler_owned_field.hzn
package probes

type Event struct {
    eth xdp.Eth
}

map Events ringbuf[Event]
